# advent-of-code-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  day17_2016_exercise.cpp  setup_solution.ps1
sharpmake/: aoc_project.cs  foundation_lib_aoc_project.cs  main.sharpmake.cs
src/: CMakeLists.txt
src/aoc/: main.cpp
src/aoc/2015/: 2015_exercises.cpp  day1_2015_exercise.cpp  day2_2015_exercise.cpp  day3_2015_exercise.cpp  day4_2015_exercise.cpp  day5_2015_exercise.cpp  day6_2015_exercise.cpp  day7_2015_exercise.cpp
src/aoc/2016/: 2016_exercises.cpp  day10_2016_exercise.cpp  day11_2016_exercise.cpp  day12_2016_exercise.cpp  day13_2016_exercise.cpp  day14_2016_exercise.cpp  day15_2016_exercise.cpp  day16_2016_exercise.cpp  day17_2016_exercise.cpp  day1_2016_exercise.cpp  day2_2016_exercise.cpp  day3_2016_exercise.cpp  day4_2016_exercise.cpp  day5_2016_exercise.cpp  day6_2016_exercise.cpp  day7_2016_exercise.cpp  day8_2016_exercise.cpp  day9_2016_exercise.cpp
src/aoc/2023/: 2023_exercises.cpp  day1_2023_exercise.cpp  day2_2023_exercise.cpp  day3_2023_exercise.cpp  day4_2023_exercise.cpp  day5_2023_exercise.cpp  day6_2023_exercise.cpp  day7_2023_exercise.cpp  day8_2023_exercise.cpp
src/aoc/infrastructure/: aoc_machine.cpp  aoc_machine.h  application_data.h  exercise.cpp  exercise.h  state_enum.h  states.cpp  states.h
